@@ -31,19 +31,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
  * for all tests inside that class. Any method level configurations will
  * override the class level configurations.
  *
- * <p>WARNING: Java considers environment variables to be immutable, so this extension
- * uses reflection to change them. This requires that the {@link SecurityManager}
- * allows modifications and can potentially break on different operating systems and
- * Java versions. Be aware that this is a fragile solution and consider finding a
- * better one for your specific situation. If you're running on Java 9 or later, you
- * may have to add {@code --add-opens=java.base/java.util=ALL-UNNAMED} to your test
- * execution to prevent warnings or even errors.
- *
- * @since 0.6
+ * @since 0.5
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ ElementType.METHOD, ElementType.TYPE })
-@Repeatable(SetSystemProperties.class)
+@Repeatable(SetSystemProperty.SetSystemProperties.class)
 @ExtendWith(SystemPropertyExtension.class)
 public @interface SetSystemProperty {
 
@@ -56,5 +48,17 @@ public @interface SetSystemProperty {
 	 * The value of the system property to be set.
 	 */
 	String value();
+
+	/**
+	 * Containing annotation of repeatable {@code @SetSystemProperty}.
+	 */
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target({ ElementType.METHOD, ElementType.TYPE })
+	@ExtendWith(SystemPropertyExtension.class)
+	@interface SetSystemProperties {
+
+		SetSystemProperty[] value();
+
+	}
 
 }
